<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">madari</string>
    <string name="action_settings">Settings</string>
    <string name="signIn">Sign In</string>
    <string name="guest">Guest</string>
    <string name="signUp">Sign Up</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="goToALocation">Go To A Location</string>
    <string name="addMarker">Add A Marker</string>
    <string name="getCurrentLocation">Get Current Location</string>
    <string name="showCurrentLocation">Show Current Location</string>
    <string name="title_activity_mark_in_win">MarkInWin</string>
    <string name="occasion">Occasion</string>
    <string name="type_of_food">Type Of Food</string>
    <string name="time_duration">Time Duration</string>
    <string name="quantity">Quantity Of Food</string>
    <string name="contact">Contact No</string>
    <string name="address">Address Details</string>
    <string name="navigate">Get Directions</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="title_activity_sign_in">SignInAct</string>
    <string name="hName">Name</string>
    <string name="hEmailId">Email Id</string>
    <string name="hPassword">Password</string>
    <string name="hPhoneNumber">Phone Number</string>
    <string name="register">New User, Register Here</string>
    <string name="title_activity_signup_register">SignupRegister</string>
    <string name="registerButton">REGISTER</string>
    <string name="loginUser">Already Registered, Login Here</string>
    <string name="title_activity_food_details">FoodDetails</string>
    <string name="hello_world">Hello world!</string>
    <string name="hAddress">Address</string>
    <string name="veg">Veg</string>
    <string name="nonVeg">Non Veg</string>
    <string name="submit">Submit</string>
    <string name="hLatLong">Geo Points</string>
    <string name="hLocation">Location</string>
    <string name="hDescription">Description</string>
    <string name="hSearch">Search</string>
    <string name="bAdd">+</string>
    <string name="title_activity_main">MainActivity</string>

</resources>
