<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MarkInWin" >

    <TextView
        android:id="@+id/tvOccasion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/occasion"	/>
    <TextView
        android:id="@+id/tvTypeOfFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type_of_food"
        />

    <TextView
        android:id="@+id/tvQuantity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_duration" />

    <TextView
        android:id="@+id/tvContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contact" />

    <TextView
        android:id="@+id/tvAddressDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address" />
    
    <TextView
        android:id="@+id/tvLat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude" />
    
    <TextView
        android:id="@+id/tvLong"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/longitude" />

    <Button
        android:id="@+id/bNav"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navigate" />
</LinearLayout>