<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvEmailId"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <TextView
        android:id="@+id/tvLatLong"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />
    
    <EditText
        android:id="@+id/etLocation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hLocation"
        android:ems="10" >

    </EditText>

    <EditText
        android:id="@+id/etOccasion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/occasion" />
    
    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hDescription"
        android:ems="10" />

    <CheckBox
        android:id="@+id/cbPostVeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/veg" />

    <CheckBox
        android:id="@+id/cbPostNonVeg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nonVeg" />

    <Button
        android:id="@+id/bSubmit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit" />

</LinearLayout>