<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <EditText
        android:id="@+id/etRegName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:hint="@string/hName"
    />

    <EditText
        android:id="@+id/etRegEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/hEmailId"
        android:inputType="textEmailAddress" />
    
    <EditText
        android:id="@+id/etRegPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/hPassword" />
    
    <TextView 
        android:id="@+id/tvRegError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#e30000"
        android:padding="10dip"
        android:textStyle="bold" />

    <Button
        android:id="@+id/bReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registerButton"        />

    <TextView
        android:id="@+id/tvRegLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginUser" />
    
</LinearLayout>
</ScrollView>