<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" >

<LinearLayout 
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:layout_width="fill_parent"
    android:layout_gravity="right"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SignInAct" >
    
    
    <EditText 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/hName"
        android:inputType="textPersonName"
        android:id="@+id/etName"
        />
    
    <EditText 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/hEmailId"
        android:inputType="textEmailAddress"
        android:id="@+id/etEmailId"
        />
    <EditText 
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:hint="@string/hPassword"
        android:inputType="textPassword"
        android:id="@+id/etPassword"
        />
    
    <TextView 
        android:id="@+id/tvLoginError"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="#e30000"
        android:padding="10dip"
        android:textStyle="bold"
        />
    
    <Button 
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:gravity="center"
        android:text="@string/signIn"
        android:id="@+id/bEmailSignIn"
        />
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/register"
        android:id="@+id/tvRegister"
        />

</LinearLayout>
</ScrollView>